--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/index.js"
   },
-  "lint-staged": {
-		"*.js": "eslint --fix"
+	"husky": {
+		"pre-commit": "lint-staged"
 	},
+  "lint-staged": {
+    "*.js": "eslint --fix"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lwauke/checkout.git"
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "^7.11.0",
+    "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
     "nodemon": "^2.0.5"
   }
