--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "build": "rollup --watch -m -c rollup.config.js",
+    "start": "nodemon src/server.js",
+    "dev": "run-p build start"
   },
-	"husky": {
-		"pre-commit": "lint-staged"
-	},
+  "husky": {
+    "pre-commit": "lint-staged"
+  },
   "lint-staged": {
     "*.js": "eslint --fix"
   },
@@ -24,12 +26,25 @@
   },
   "homepage": "https://github.com/lwauke/checkout#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "eslint": "^7.11.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "npm-run-all": "^4.1.5",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "redux": "^4.0.5",
+    "rollup": "^2.32.0"
   }
 }
